corpus/expressions.txt
===
Integer
===

239

---

(program
  (pipeline_statement
    (number_expr)))

===
Float
===

12.9191008

---

(program
  (pipeline_statement
    (number_expr)))

===
Scientific notation
===

6.022e23

.12E4

---

(program
  (pipeline_statement
    (number_expr))
  (pipeline_statement
    (number_expr)))

===
Unsigned
===

12u

42U

---

(program
  (pipeline_statement
    (number_expr))
  (pipeline_statement
    (number_expr)))

===
Byte size suffix
===

12mb

12GB

---

(program
  (pipeline_statement
    (number_expr))
  (pipeline_statement
    (number_expr)))

===
Combined number format
===

.2e3ulMB

---

(program
  (pipeline_statement
    (number_expr)))

===
Simple variable
===

$aSimpleVariable001

$91

$__Z

$env:PROGRAM_LOCATION

---

(program
  (pipeline_statement
    (variable
      (simple_variable)))
  (pipeline_statement
    (variable
      (simple_variable)))
  (pipeline_statement
    (variable
      (simple_variable)))
  (pipeline_statement
    (variable
      (simple_variable))))

===
Special variables
===

$$

$^

$?

---

(program
  (pipeline_statement
    (variable))
  (pipeline_statement
    (variable))
  (pipeline_statement
    (variable)))

===
Brace variable
===

${Simple}

${More-interestin'}

${
    Really &&
    quite ^
    unusual???
}

---

(program
  (pipeline_statement
    (variable))
  (pipeline_statement
    (variable))
  (pipeline_statement
    (variable)))

===
Splat variable can't be by itself
===

@badByItself

---

(program
  (ERROR 
    (splatted_variable)))

===
Single-quoted string
===

'Hello, &!@#(&)!I_@U!JJ!EN@!'

---

(program
  (pipeline_statement
    (single_quote_string)))

===
Double-quoted string
===

"Hello friend! !@!_(@FK@L!:D<!LQ!W(EK!_#(KQ!(%*(@!)"

---

(program
  (pipeline_statement
    (double_quote_string)))

===
Variable substituted string
===

"Hi $person"

---

(program
  (pipeline_statement
    (double_quote_string
      (variable
        (simple_variable)))))

===
Brace-variable substituted string
===

"He was ${adjective}able"

---

(program
  (pipeline_statement
    (double_quote_string
      (variable))))

===
Escaped variable in double quoted string
===

"In the `$money"

---

(program
  (pipeline_statement
    (double_quote_string)))

===
Escaped brace variable in double quoted string
===

"In the `${money}"

---

(program
  (pipeline_statement
    (double_quote_string)))

===
Basic hashtable
===

@{
    Hi = "There"
}

---

(program
  (pipeline_statement
    (hashtable_expression
      (hashtable_entry
        (property_name
            (identifier))
        (double_quote_string)))))

===
Multi-key hashtable
===

@{
    Key1 = "Hi"; Key2 = "There"

    "Key3" = 'Friend'


    'Key4' = 'Thing'; $key5 = $result
}

---

(program
  (pipeline_statement
    (hashtable_expression
      (hashtable_entry
        (property_name
          (identifier))
        (double_quote_string))
      (hashtable_entry
        (property_name
          (identifier))
        (double_quote_string))
      (hashtable_entry
        (property_name
          (double_quote_string))
        (single_quote_string))
      (hashtable_entry
        (property_name
          (single_quote_string))
        (single_quote_string))
      (hashtable_entry
        (property_name
          (variable
            (simple_variable)))
        (variable
            (simple_variable))))))

===
Simple type expression #1
===

[string]

---

(program
  (pipeline_statement
    (type_expr)))

===
Simple type expression #2
===

[System.Collections.ArrayList]

---

(program
  (pipeline_statement
    (type_expr)))

===
Array type expression #1
===

[int[]]

---

(program
  (pipeline_statement
    (type_expr)))

===
Array type expression #1
===

[System.DateTime[]]

---

(program
  (pipeline_statement
    (type_expr)))

===
Generic type expression #1
===

[MyType[psobject]]

---

(program
  (pipeline_statement
    (type_expr)))

===
Generic type expression #2
===

[System.Collections.Generic.Dictionary[string, System.IO.FileInfo]]

---

(program
  (pipeline_statement
    (type_expr)))

===
Complex type expression
===

[System.Collections.Generic.Dictionary[int[], System.Collections.Generic.List[string[]]]]

---

(program
  (pipeline_statement
    (type_expr)))

===
Type-attributed variable
===

[string]$str

---

(program
  (pipeline_statement
    (type_expr)
    (variable
      (simple_variable))))

===
Non-type attributed variable
===

[MyAttribute()]$var

---

(program
  (pipeline_statement
    (non_type_attribute)
    (variable
      (simple_variable))))

===
Double attributed variable
===

[MyAttribute()][string]$var

---

(program
  (pipeline_statement
    (non_type_attribute)
    (type_expr)
    (variable
      (simple_variable))))
